# gpui-component

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  COMPLETE_RESTRUCTURE_PLAN.md  Cargo.toml  DEBUGGING_FILE_SYNC.md  DEFAULT_BLUEPRINT.md  DEFAULT_GRAPH_UPDATE.md  EasyRun.py  FINAL_STATUS.md  LICENSE.md  LSP_COMPLETION_CHANGES.md  MIGRATION_TRACKER.md  MULTIPLAYER_IMPROVEMENTS.md  MULTIPLAYER_SYNC_ARCHITECTURE.md  MULTIPLAYER_SYNC_MIGRATION_SUMMARY.md  QUICK_WINS_IMPLEMENTATION.md  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_STATUS.md  RUNNING_IN_RELEASE.md  SYNC_MIGRATION_COMPLETE.md  TRUE_ZERO_COPY_ANALYSIS.md  TYPE_SYSTEM_BLOCK_EDITOR.md  TYPE_SYSTEM_README.md  VIEWPORT_CONTROLS_BEFORE_AFTER.md  VIEWPORT_REDESIGN.md  VIEWPORT_SCOPED_CONTROLS.md  VIEWPORT_SYSTEM_RESEARCH_BLOG.md  add_icons.py  blueprint.json  build.rs  build_errors.txt  canvas.rs  compiled_blueprint.rs  fix_imports.ps1  flake.nix  graph_save.json  popup_menu_debug_notes.md  test.rs  (+6 more)
crates/engine/: Cargo.toml  build.rs
crates/engine/.claude/: settings.local.json
crates/engine/multiuser_server/: .dockerignore  Dockerfile  build.rs
crates/engine/multiuser_server/examples/: simple_client.rs
crates/engine/multiuser_server/kubernetes/: hpa.yaml
crates/engine/multiuser_server/src/: config.rs  http_server.rs  lib.rs  main.rs  metrics.rs  nat.rs  rendezvous.rs  session.rs
crates/engine/src/: assets.rs  engine_state.rs  lib.rs  main.rs  main_old.rs  recent_projects.rs  stdlib_builder.rs  structure.txt  test_compilation.rs  themes.rs  window_manager.rs  window_system.rs
crates/engine/src/compiler/: ast_utils.rs  code_generator.rs  data_resolver.rs  execution_routing.rs  mod.rs  node_metadata.rs  node_parser.rs  subgraph_expander.rs  tests.rs  validate_blueprint.rs
crates/engine/src/graph/: mod.rs  type_system.rs
crates/engine/src/settings/: engine_settings.rs  mod.rs
crates/engine/src/subsystems/: mod.rs
crates/engine/src/ui/: app.rs  command_palette.rs  entry_screen.rs  entry_screen.rs.backup  entry_window.rs  file_manager_drawer.rs  file_manager_window.rs  file_sync.rs  git_sync.rs  gpu_renderer.rs  loading_window.rs  lsp_completion_provider.rs  menu.rs  mod.rs  multiuser_client.rs  problems_drawer.rs  problems_window.rs  project_selector.rs  rainbow_engine_final.rs  rust_analyzer_manager.rs  rust_analyzer_manager.rs.backup  settings_screen.rs  settings_window.rs  shared.rs  simple_sync.rs  terminal_drawer.rs  terminal_window.rs  wgpu_3d_renderer.rs
crates/engine/src/window/: app.rs  app_backup.rs  app_extracted.txt  mod.rs  state.rs  vulkan_init.rs
crates/engine_backend/: Cargo.toml  test_api.rs
crates/engine_backend/src/: gpu_interop.rs  lib.rs
crates/engine_backend/src/api/: mod.rs
crates/engine_backend/src/services/: gpu_renderer.rs  lsp_completion_provider.rs  rust_analyzer_manager.rs
crates/engine_state/: Cargo.toml
crates/engine_state/src/: channels.rs  lib.rs  metadata.rs  renderers.rs
crates/engine_window/: Cargo.toml
crates/engine_window/src/: app.rs  events.rs  lib.rs
crates/multiuser_server/: Cargo.toml  README.md  schema.sql
crates/multiuser_server/kubernetes/: deployment.yaml  service.yaml
crates/multiuser_server/proto/: pulsar.proto
crates/multiuser_server/src/: auth.rs  config.rs  health.rs  http_server.rs  lib.rs  logging.rs  main.rs  metrics.rs  persistence.rs  relay.rs  session.rs  shutdown.rs  telemetry.rs
crates/pulsar_docs/: Cargo.toml  build.rs
crates/pulsar_docs/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: actions.rs  bevy_viewport.rs  checkbox.rs  code_editor.rs  color_picker.rs  component.rs  diagnostics.rs  drawer.rs  dropdown.rs  dx11_shared_opener.rs  event.rs  form.rs  gpu_mem_tracker.rs  gpu_viewport.rs  icon.rs  inspector.rs  kbd.rs  label.rs  lib.rs  minimap.rs  modal.rs  notification.rs  popover.rs  radio.rs  raw_gpu_canvas.rs  root.rs  shader_triangle.wgsl  switch.rs  themes.rs  title_bar.rs  utils.rs  viewport.rs  viewport3d.rs  viewport_final.rs  viewport_optimized.rs  virtual_list.rs  wgpu_viewport.rs
test_game/: Cargo.toml  Pulsar.toml
test_game/src/: engine_main.rs  main.rs
test_game/src/classes/: mod.rs
ui-crates/ui_alias_editor/: Cargo.toml
ui-crates/ui_alias_editor/src/: block_canvas.rs  constructor_palette.rs  editor.rs  editor.rs.old  lib.rs  type_block.rs  visual_editor.rs
ui-crates/ui_common/: Cargo.toml
ui-crates/ui_common/src/: file_utils.rs  lib.rs  mod.rs  shared.rs
ui-crates/ui_core/: Cargo.toml
ui-crates/ui_core/src/: app.rs  flow.rs  lib.rs  mod.rs  shared.rs  unified_palette.rs
ui-crates/ui_documentation/: Cargo.toml
ui-crates/ui_documentation/src/: lib.rs  lib.rs.bak  state.rs
ui-crates/ui_editor/: Cargo.toml
ui-crates/ui_editor/src/: editor_mod.rs  lib.rs
ui-crates/ui_editor_table/: Cargo.toml  README.md
ui-crates/ui_editor_table/examples/: simple_datatable.rs
ui-crates/ui_editor_table/src/: cell_editors.rs  database.rs  editor.rs  lib.rs  query_editor.rs  reflection.rs  table_view.rs  workspace_panels.rs
ui-crates/ui_entry/: Cargo.toml
ui-crates/ui_entry/src/: dependency_setup_window.rs  lib.rs  loading_window.rs  window.rs
ui-crates/ui_file_manager/: Cargo.toml
ui-crates/ui_file_manager/src/: file_manager_drawer.rs  lib.rs  window.rs
ui-crates/ui_multiplayer/: Cargo.toml
ui-crates/ui_multiplayer/src/: chat.rs  connection.rs  file_sync.rs  lib.rs  presence.rs  session.rs  state.rs  traits.rs  types.rs  ui.rs  utils.rs
ui-crates/ui_problems/: Cargo.toml
ui-crates/ui_problems/src/: lib.rs  problems_drawer.rs  window.rs
ui-crates/ui_settings/: Cargo.toml
ui-crates/ui_settings/src/: lib.rs  window.rs
ui-crates/ui_struct_editor/: Cargo.toml
ui-crates/ui_struct_editor/src/: editor.rs  field_list.rs  lib.rs  type_picker.rs
ui-crates/ui_terminal/: Cargo.toml
ui-crates/ui_terminal/src/: lib.rs  mod.rs  rendering.rs  terminal_core.rs  terminal_drawer.rs  terminal_element.rs  terminal_element_zed.rs  window.rs
ui-crates/ui_types_common/: Cargo.toml
ui-crates/ui_types_common/src/: codegen.rs  errors.rs  index.rs  lib.rs  types.rs  validation.rs
(+942 files in other folders)
