[workspace]
members = [
    "crates/macros",
    "crates/engine",
    "crates/engine_backend",
    "crates/ui",
    "crates/pulsar_macros",
    "crates/pulsar_std",
    "test_game",
]

default-members = ["crates/engine"]
resolver = "2"

[workspace.dependencies]
gpui-component = { path = "crates/ui" }
pulsar_std = { path = "crates/pulsar_std" }
gpui-component-macros = { path = "crates/macros" }
gpui = { git = "https://github.com/zed-industries/zed.git" }
horizon = { git = "https://github.com/Far-Beyond-Dev/horizon" }
gpui-macros = { git = "https://github.com/zed-industries/zed.git" }
zed-sum-tree = { git = "https://github.com/zed-industries/zed.git" }
reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
ropey = { version = "1.6.1", features = ["metric_utf16", "metric_lines_lf"] }

log = "0.4"
smol = "2.0.2"
notify = "8.2.0"
anyhow = "1"
tracing = "0.1.41"
smallvec = "1"
schemars = "1"
lsp-types = "0.97.0"
rust-i18n = "3"
itertools = "0.14.0"
serde_repr = "0.1"
serde_json = "1"
directories = "6.0.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.219", features = ["derive"] }

[workspace.dependencies.windows]
version = "0.62.2"
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices", "Win32_System_Threading", "Win32_System_SystemInformation"]

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
manual_is_multiple_of = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]
