[workspace]
members = [
    "crates/macros",
    "crates/engine",
    "crates/engine_backend",
    "crates/ui",
    "crates/pulsar_macros",
    "crates/pulsar_std",
    "test_game",
]

default-members = ["crates/engine"]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
gpui = { git = "https://github.com/tristanpoland/zed", features = ["runtime_shaders", "macos-blade"] }
gpui_macros = { git = "https://github.com/tristanpoland/zed" }
reqwest_client = { git = "https://github.com/tristanpoland/zed" }
sum_tree = { git = "https://github.com/tristanpoland/zed" }
gpui-component = { path = "crates/ui" }
gpui-component-macros = { path = "crates/macros" }
pulsar_std = { path = "crates/pulsar_std" }
ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }
horizon = { git = "https://github.com/Far-Beyond-Dev/horizon" }
engine_backend = { path = "crates/engine_backend" }

anyhow = "1"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
schemars = "1"
smallvec = "1"
rust-i18n = "3"
raw-window-handle = "0.6.2"
smol = "1"
tracing = "0.1.41"
notify = "7.0.0"
lsp-types = "0.97.0"
directories = "5"
itertools = "0.13"
rapier3d = { version = "*", features = [ "simd-stable" ] }

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices", "Win32_System_Threading", "Win32_System_SystemInformation"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
manual_is_multiple_of = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]