[workspace]
members = [
    "crates/macros",
    "crates/engine",
    "crates/engine_backend",
    "crates/engine_state",
    "crates/ui",
    "crates/pulsar_macros",
    "crates/pulsar_std",
    "crates/multiuser_server",
    # UI component crates
    "ui-crates/ui_common",
    "ui-crates/ui_core",
    "ui-crates/ui_entry",
    "ui-crates/ui_editor",
    "ui-crates/ui_settings",
    "ui-crates/ui_multiplayer",
    "ui-crates/ui_terminal",
    "ui-crates/ui_problems",
    "ui-crates/ui_file_manager",
    "ui-crates/ui_loading_screen",
    "ui-crates/ui_project_launcher", "ui-crates/ui_about",
]

default-members = ["crates/engine"] 
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
gpui = { git = "https://github.com/tristanpoland/zed", rev="433b9ae0dce0e0dae03c4ac44d70575c981c530c", features = ["runtime_shaders", "macos-blade"] }
gpui_macros = { git = "https://github.com/tristanpoland/zed", rev="433b9ae0dce0e0dae03c4ac44d70575c981c530c" }
reqwest_client = { git = "https://github.com/tristanpoland/zed", rev = "433b9ae0dce0e0dae03c4ac44d70575c981c530c" }
sum_tree = { git = "https://github.com/tristanpoland/zed", rev = "433b9ae0dce0e0dae03c4ac44d70575c981c530c" }
# gpui ={ path="../zed/crates/gpui", features = ["runtime_shaders", "macos-blade"] }
# gpui_macros = { path="../zed/crates/gpui_macros" }
# reqwest_client = { path="../zed/crates/reqwest_client" }
# sum_tree = { path="../zed/crates/sum_tree" }

ui = { path = "crates/ui" }
gpui-component-macros = { path = "crates/macros" }
pulsar_std = { path = "crates/pulsar_std" }
ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16", "metric_lines_lf"] }
horizon = { git = "https://github.com/Far-Beyond-Dev/horizon" }
engine_backend = { path = "crates/engine_backend" }
engine_state = { path = "crates/engine_state" }

# UI component crates
ui_core = { path = "ui-crates/ui_core" }
ui_entry = { path = "ui-crates/ui_entry" }
ui_editor = { path = "ui-crates/ui_editor" }
ui_settings = { path = "ui-crates/ui_settings" }
ui_multiplayer = { path = "ui-crates/ui_multiplayer" }
ui_terminal = { path = "ui-crates/ui_terminal" }
ui_problems = { path = "ui-crates/ui_problems" }
ui_file_manager = { path = "ui-crates/ui_file_manager" }
ui_common = { path = "ui-crates/ui_common" }
ui_loading_screen = { path = "ui-crates/ui_loading_screen" }
ui_project_launcher = { path = "ui-crates/ui_project_launcher" }
ui_about = { path = "ui-crates/ui_about" }

anyhow = "1"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
schemars = "1"
smallvec = "1"
rust-i18n = "3"
raw-window-handle = "0.6.2"
winit = "0.30"
smol = "1"
tracing = "0.1.41"
notify = "7.0.0"
lsp-types = "0.97.0"
directories = "5"
itertools = "0.13"
rapier3d = { version = "*", features = [ "simd-stable" ] }

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_Graphics_Direct3D_Fxc"]
version = "0.58.0"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
manual_is_multiple_of = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]
