[package]
edition = "2021"
name = "pulsar_engine"
description = "A modern high-performance game engine written in Rust"
publish = false
version = "0.1.33"

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "pulsar_engine"
path = "src/main.rs"

[dependencies]
horizon.workspace = true
anyhow.workspace = true
gpui.workspace = true
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1.41"
rust-embed = { version = "6", features = ["interpolate-folder-path", "include-exclude"] }
flume = "0.11"
tokio = { version = "1", features = ["full"] }
windows.workspace = true
tron = "2.1.0"
dashmap = "6.1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
smol.workspace = true
rfd = "0.15"
git2 = "0.19"
directories = "5"
toml = "0.8"
parking_lot = "0.12"
open = "5"
lsp-types.workspace = true
ropey.workspace = true

# New compiler dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
prettyplease = "0.2"
pulsar_std = { path = "../pulsar_std" }

# DAW audio dependencies
cpal = "0.15"      # Audio I/O library
hound = "3.5"
lewton = "0.10"
claxon = "0.4"
minimp3 = "0.5"    # MP3 decoder
crossbeam = "0.8.4"  # Concurrency utilities
wgpu = "0.20"      # GPU compute and rendering
bytemuck = { version = "1.14", features = ["derive"] }
ron = "0.8"
futures = "0.3"    # Async primitives for GPUI compatibility
portable-pty = "0.8"  # PTY support for terminal emulator
which = "6"  # Find executables in PATH
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty.git", branch = "add-hush-login-flag" }  # Professional terminal emulator
libc = "0.2"  # Low-level system calls for PTY

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
