[package]
edition = "2021"
name = "pulsar_engine"
description = "A modern high-performance game engine written in Rust"
publish = false
version = "0.1.46"

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "pulsar_engine"
path = "src/lib.rs"

[[bin]]
name = "pulsar_engine"
path = "src/main.rs"

[dependencies]
horizon.workspace = true
anyhow.workspace = true
gpui.workspace = true
ui = { workspace = true, features = ["tree-sitter-languages"] }
winit.workspace = true
raw-window-handle.workspace = true

# Engine crates
engine_backend.workspace = true
engine_state.workspace = true

# UI crates - commented out to avoid circular dependency during build
# The UI crates depend on engine, so we can't have engine depend on them
# Instead, engine will link against them at runtime
ui_core.workspace = true
ui_common.workspace = true
ui_entry.workspace = true
ui_editor.workspace = true
ui_settings.workspace = true
ui_multiplayer.workspace = true
ui_terminal.workspace = true
ui_problems.workspace = true
ui_file_manager.workspace = true
ui_loading_screen.workspace = true
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1.41"
rust-embed = { version = "6", features = ["interpolate-folder-path", "include-exclude"] }
flume = "0.11"
tokio = { version = "1", features = ["full"] }
windows.workspace = true
tron = "2.1.0"
dashmap = "6.1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2.4"
smol.workspace = true
rfd = "0.15"
git2 = "0.19"
directories = "5"
toml = "0.8"
parking_lot = "0.12"
open = "5"
lsp-types.workspace = true
ropey.workspace = true

# New compiler dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
prettyplease = "0.2"
pulsar_std = { path = "../pulsar_std" }

# DAW audio dependencies
cpal = { version = "0.15", default-features = false }

hound = "3.5"
lewton = "0.10"
claxon = "0.4"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "vorbis"] }  # Modern audio decoder
crossbeam = "0.8.4"  # Concurrency utilities
wgpu = "0.20"      # GPU compute and rendering
bytemuck = { version = "1.14", features = ["derive"] }
ron = "0.8"
futures = "0.3"    # Async primitives for GPUI compatibility
portable-pty = "0.8"  # PTY support for terminal emulator
which = "6"  # Find executables in PATH
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty.git", branch = "add-hush-login-flag" }  # Professional terminal emulator
itertools.workspace = true  # Iterator utilities
libc = "0.2"  # Low-level system calls for PTY
device_query = "2.1"  # Raw keyboard/mouse input polling - bypasses GPUI for viewport controls
winapi = { version = "0.3", features = ["winuser"] }  # Windows API for keyboard hook to suppress WASD events
sysinfo = "0.30"  # System information
reqwest = { version = "0.12", features = ["json"] }  # HTTP client (existing, used for GitHub API)
async-tungstenite = { version = "0.23", features = ["tokio-runtime"] }  # WebSocket client
url = "2.5"  # URL parsing

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
