[package]
edition = "2021"
name = "engine_backend"
description = "A modern high-performance game engine backend written in Rust"
publish = false
version = "0.1.34"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true

[dependencies]
PebbleVault = "0.7.0"
