[package]
name = "engine_window"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Window management
winit.workspace = true
raw-window-handle.workspace = true

# State management
engine_state.workspace = true

# Async
tokio = { version = "1", features = ["sync"] }

# Utilities
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
