[package]
name = "pulsar-multiedit"
version = "0.1.0"
edition = "2021"
description = "Pulsar MultiEdit - rendezvous, relay, matchmaker in one binary"

[[bin]]
name = "pulsar-multiedit"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Web server
axum = { version = "0.7", features = ["ws", "macros", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.5", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }

# QUIC transport
quinn = "0.11"
rustls = "0.23"
rustls-pemfile = "2.1"
rcgen = "0.13"

# Networking
socket2 = "0.5"

# Crypto
snow = "0.9"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"
hmac = "0.12"

# JWT
jsonwebtoken = "9.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
prost = "0.13"
prost-types = "0.13"

# WebSocket
tokio-tungstenite = "0.24"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry-prometheus = "0.17"

# Metrics
prometheus = "0.13"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }

# S3 Storage
aws-config = "1.1"
aws-sdk-s3 = "1.11"

# Config & CLI
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.1"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.13"
tempfile = "3.12"
reqwest = { version = "0.12", features = ["json"] }

# [[bench]]
# name = "relay_throughput"
# harness = false

# [[bench]]
# name = "crdt_convergence"
# harness = false
