[package]
description = "UI components for building fantastic desktop application by using GPUI."
edition = "2021"
homepage = "https://github.com/longbridge/gpui-component"
keywords = ["GPUI", "application", "desktop", "ui"]
license-file = "LICENSE-APACHE"
name = "ui"
publish = true
version = "0.1.0"

[lib]
doctest = false

[features]
decimal = ["dep:rust_decimal"]
inspector = ["gpui/inspector"]
# For syntax highlighting in Markdown and CodeEditor.
tree-sitter-languages = [
    "dep:tree-sitter-bash",
    "dep:tree-sitter-c",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-cmake",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-css",
    "dep:tree-sitter-diff",
    "dep:tree-sitter-elixir",
    "dep:tree-sitter-embedded-template",
    "dep:tree-sitter-go",
    "dep:tree-sitter-graphql",
    "dep:tree-sitter-html",
    "dep:tree-sitter-java",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-jsdoc",
    "dep:tree-sitter-make",
    "dep:tree-sitter-md",
    "dep:tree-sitter-proto",
    "dep:tree-sitter-python",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-scala",
    "dep:tree-sitter-sequel",
    "dep:tree-sitter-swift",
    "dep:tree-sitter-toml-ng",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-yaml",
    "dep:tree-sitter-zig",
]

[dependencies]
# For wgpu window integration and async
raw-window-handle = "0.6"
winit = "0.29"
# For wgpu vertex buffer
bytemuck = { version = "1.14", features = ["derive"] }
gpui.workspace = true
sum_tree.workspace = true
gpui_macros.workspace = true
# rope.workspace = true
anyhow.workspace = true
gpui-component-macros.workspace = true
notify.workspace = true
ropey.workspace = true
rust-i18n.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
smallvec.workspace = true
smol.workspace = true
tracing.workspace = true

itertools = "0.13.0"
once_cell = "1.19.0"
paste = "1"
regex = "1"
unicode-segmentation = "1.12.0"
uuid = "1.10"
futures = "0.3"
pollster = "0.4.0"
parking_lot = "0.12"
lazy_static = "1.4"

# Chart
num-traits = "0.2"
rust_decimal = { version = "1.37.0", optional = true }

# 3D rendering
wgpu = "0.20"
glam = "0.27"

# Markdown Parser
markdown = "1.0.0"

# HTML Parser
html5ever = "0.27"
markup5ever_rcdom = "0.3.0"

# Calendar
chrono = "0.4.38"

# Image processing
image = "0.25"


# Code Editor
aho-corasick = "1.1.3"
lsp-types.workspace = true
tree-sitter = "0.25.4"
tree-sitter-bash = { version = "0.23.3", optional = true }
tree-sitter-c = { version = "0.24.1", optional = true }
tree-sitter-c-sharp = { version = "0.23.1", optional = true }
tree-sitter-cmake = { version = "0.7.1", optional = true }
tree-sitter-cpp = { version = "0.23.4", optional = true }
tree-sitter-css = { version = "0.23.2", optional = true }
tree-sitter-diff = { version = "0.1.0", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-embedded-template = { version = "0.23.0", optional = true }
tree-sitter-go = { version = "0.23.4", optional = true }
tree-sitter-graphql = { version = "0.1.0", optional = true }
tree-sitter-html = { version = "0.23.2", optional = true }
tree-sitter-java = { version = "0.23.5", optional = true }
tree-sitter-javascript = { version = "0.23.1", optional = true }
tree-sitter-jsdoc = { version = "0.23.2", optional = true }
tree-sitter-json = "0.24.8"
tree-sitter-make = { version = "1.1.1", optional = true }
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", tag = "v0.5.0", optional = true }
tree-sitter-proto = { version = "0.2.0", optional = true }
tree-sitter-python = { version = "0.23.6", optional = true }
tree-sitter-ruby = { version = "0.23.1", optional = true }
tree-sitter-rust = { version = "0.24.0", optional = true }
tree-sitter-scala = { version = "0.23.4", optional = true }
tree-sitter-sequel = { version = "0.3.8", optional = true }
tree-sitter-swift = { version = "0.7.0", optional = true }
tree-sitter-toml-ng = { version = "0.7.0", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-yaml = { version = "0.7.1", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }
enum-iterator = "2.3.0"

# Engine type dependencies (from copied modules)
toml = "0.8"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
rust-embed = { version = "6", features = ["interpolate-folder-path", "include-exclude"] }
prettyplease = "0.2"
directories = "5"
pulsar_std = { path = "../pulsar_std" }

# Windows DirectX for shared texture opening (zero-copy DX12<->DX11)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
] }

[dev-dependencies]
indoc = "2"

[lints]
workspace = true
