[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# UI framework
gpui.workspace = true
ui.workspace = true

# Shared UI
ui_common.workspace = true

# Engine
engine_state.workspace = true
engine_backend.workspace = true

# File operations
walkdir = "2.4"
directories = "5"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
