[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# UI framework
gpui.workspace = true
ui.workspace = true

# UI crates (all of them!)
ui_common.workspace = true
ui_editor.workspace = true
ui_entry.workspace = true
ui_settings.workspace = true
ui_multiplayer.workspace = true
ui_terminal.workspace = true
ui_problems.workspace = true
ui_file_manager.workspace = true

# Engine
engine_state.workspace = true
engine_backend.workspace = true

# File operations
walkdir = "2.4"
directories = "5"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
