[package]
name = "ui_editor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# UI framework
gpui.workspace = true
ui.workspace = true

# UI crates
ui_common.workspace = true
ui_core.workspace = true

# Engine
engine_state.workspace = true
engine_backend.workspace = true

# Code editing
ropey.workspace = true
lsp-types.workspace = true
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

# Audio (DAW editor)
cpal = { version = "0.15", default-features = false }
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "vorbis"] }

# GPU compute (DAW)
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }

# Scripting
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"

# File system
notify.workspace = true
walkdir = "2.4"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
itertools.workspace = true
flume = "0.11"
