[package]
name = "ui_editor_table"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# UI framework
gpui.workspace = true
ui.workspace = true

# UI crates
ui_common.workspace = true

# Engine
engine_state.workspace = true
pulsar_std.workspace = true

# Database
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }

# Utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "6.1"
smol.workspace = true
tracing.workspace = true

# Type reflection
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
