[package]
name = "ui_entry"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# UI framework
gpui.workspace = true
ui.workspace = true

# UI crates
ui_common.workspace = true
# Engine
engine_state.workspace = true
engine_backend.workspace = true

# Git operations
git2 = "0.19"

# File system
directories = "5"
walkdir = "2.4"
sys-info = "0.9"
rfd = "0.15"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
sha2 = "0.10"
