[package]
name = "ui_struct_editor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# UI framework
gpui.workspace = true
ui.workspace = true
ui_common.workspace = true

# Type system
ui_types_common.workspace = true

# Engine state
engine_state.workspace = true

# Utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.11", features = ["v4", "serde"] }

# File I/O
